# tutorial-fastapi

./: LICENSE  README.md  pyproject.toml
api_pedidos/: api.py  esquema.py  excecao.py  magalu_api.py
tests/: test_api.py
